--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Anuragsingk",
   "short_name": "Anuragsingk",
-  "start_url": "",
+  "start_url": "https://anuragsingk.github.io/anuragsingg-app/",
   "display": "standalone",
   "background_color": "#0d5afd",
   "theme_color": "#0d5afd",
